@@ -1,4 +1,4 @@
-/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_open.c,v 1.4 2000-08-14 18:10:43 warmerda Exp $ */
+/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_open.c,v 1.5 2000-09-30 04:18:55 warmerda Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -349,6 +349,14 @@ TIFFClientOpen(
 	!TIFFMapFileContents(tif, (tdata_t*) &tif->tif_base, &tif->tif_size))
 			tif->tif_flags &= ~TIFF_MAPPED;
 		if (TIFFReadDirectory(tif)) {
+                        if( m != O_RDONLY 
+                          && tif->tif_dir.td_compression != COMPRESSION_NONE )
+                        {
+                            TIFFError( name, 
+                                       "Can't open a compressed TIFF file"
+                                       " with compression for update." );
+                            goto bad;
+                        }
 			tif->tif_rawcc = -1;
 			tif->tif_flags |= TIFF_BUFFERSETUP;
 			return (tif);
